feat: add api for creating a post
